--- a/src/layouts/HomeLayout.astro
+++ b/src/layouts/HomeLayout.astro
@@ -1,6 +1,7 @@
 ---
 import BaseHead from '@/components/BaseHead.astro';
 import ThemeToggle from '@/components/ThemeToggle.astro';
+import '../styles/base.css';
 ---
 
 <html lang="en">
